<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.poemgen.deeppoet.ml.GPT2Client" />

        <variable
            name="mainActivity"
            type="com.poemgen.deeppoet.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/prompt_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:layout_constraintVertical_bias="0.05">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                app:layout_constraintEnd_toStartOf="@+id/random_prompt_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/promptField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/give_the_writer_a_prompt"
                    android:inputType="textShortMessage" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/random_prompt_button"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:enabled="@{mainActivity.ready}"
                app:icon="@drawable/ic_random"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_prompt_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:enabled="@{mainActivity.ready}"
                android:text="@string/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/head_layout"
            android:layout_width="190dp"
            android:layout_height="240dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <ImageView
                android:id="@+id/imageHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:scaleType="fitStart"
                tools:srcCompat="@drawable/anim_owl_idle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--    ^^^^  first we need to set the prompt.-->


        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            app:layout_constraintBottom_toTopOf="@+id/head_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prompt_layout"
            app:layout_constraintWidth_percent="0.8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/poemTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8sp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#676565"
                    app:completion="@{vm.completion}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:prompt="@{vm.prompt}"
                    tools:text="@tools:sample/lorem/random" />

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{mainActivity.ready}"
            android:text="@string/share"
            app:layout_constraintTop_toBottomOf="@id/scrollView"
            app:layout_constraintRight_toLeftOf="@+id/continue_button"
            app:layout_constraintLeft_toLeftOf="parent"
            android:alpha="0"
            android:translationY="-30dp"
            android:visibility="gone"
            tools:translationY="0dp"
            tools:alpha="1"
            tools:visibility="visible"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:enabled="@{mainActivity.ready}"
            android:text="@string/continue_poem"
            android:translationY="-30dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/share_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/share_button"
            app:layout_constraintTop_toBottomOf="@id/scrollView"
            tools:alpha="1"
            tools:translationY="0dp"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/utilities_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/hamburgerButton"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_round_menu_24"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/showLogButton"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/hamburgerButton"
                android:enabled="@{mainActivity.ready}"
                app:icon="@drawable/ic_round_menu_book_24"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                android:visibility="gone"
                android:layout_marginBottom="0dp"
                tools:layout_marginBottom="50dp"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/showLogLabel"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/show_log"
                android:textAlignment="center"
                app:layout_constraintRight_toRightOf="@id/showLogButton"
                app:layout_constraintBottom_toBottomOf="@id/showLogButton"
                app:layout_constraintTop_toTopOf="@id/showLogButton"
                android:layout_marginRight="0dp"
                android:visibility="gone"
                tools:layout_marginRight="45dp"
                tools:visibility="visible"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/headPickerButton"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/showLogButton"
                android:enabled="@{mainActivity.ready}"
                app:icon="@drawable/ic_feather_pen"
                app:iconSize="25dp"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                android:visibility="gone"
                android:layout_marginBottom="0dp"
                tools:layout_marginBottom="50dp"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/headPickerLabel"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_head"
                android:textAlignment="center"
                app:layout_constraintRight_toRightOf="@id/headPickerButton"
                app:layout_constraintTop_toTopOf="@id/headPickerButton"
                app:layout_constraintBottom_toBottomOf="@id/headPickerButton"
                android:layout_marginRight="0dp"
                android:visibility="gone"
                tools:layout_marginRight="45dp"
                tools:visibility="visible"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/helpButton"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/headPickerButton"
                android:enabled="@{mainActivity.ready}"
                android:text="@string/helpbutton"
                android:textSize="18sp"
                android:visibility="gone"
                android:layout_marginBottom="0dp"
                tools:layout_marginBottom="50dp"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/helpLabel"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textAlignment="center"
                app:layout_constraintRight_toRightOf="@id/helpButton"
                app:layout_constraintTop_toTopOf="@id/helpButton"
                app:layout_constraintBottom_toBottomOf="@id/helpButton"
                android:layout_marginRight="0dp"
                android:visibility="gone"
                tools:layout_marginRight="45dp"
                tools:visibility="visible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>