...
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <Button
        android:id="@+id/hamburgerButton"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="H"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

...
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/showLogButton"
        app:layout_constraintRight_toRightOf="@id/showLogButton"
        app:layout_constraintTop_toTopOf="@id/showLogButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/headPickerButton"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="P"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/showLogButton"
...
