<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HeadPickerListFragment">

    <data>
        <variable
            name="headPickerListFragment"
            type="com.poemgen.deeppoet.HeadPickerListFragment" />
    </data>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHeadPickerList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/fragment_head_picker_item">

    </androidx.recyclerview.widget.RecyclerView>
</layout>

